--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -20,6 +20,11 @@ a {
 }
 a:hover {
   color: #535bf2;
+}
+
+input, textarea, select {
+  background-color: #ffffff;
+  color: #494949;
 }
 
 h1 {
