--- a/src/proyects/productsTable/styles.css
+++ b/src/proyects/productsTable/styles.css
@@ -9,28 +9,33 @@
   form {
     display: flex;
     gap: 2rem;
-    
-    input[type="checkbox"] {
-      background-color: #ffffff;
-      border: 1px solid #ccc;
-      appearance: none;
-      width: 16px;
-      height: 16px;
-      cursor: pointer;
-    }
-    input[type="checkbox"]:checked {
-      background-color: #ffffff;
-      border-color: #000000;
-      position: relative;
-    }
-    
-    input[type="checkbox"]:checked::before {
-      content: '✔';
-      color: #000000;
-      position: absolute;
-      top: -2px;
-      left: 2px;
-      font-size: 14px;
+
+    label {
+      display: flex;
+      align-items: center;
+
+      input[type="checkbox"] {
+        background-color: #ffffff;
+        border: 1px solid #ccc;
+        appearance: none;
+        width: 16px;
+        height: 16px;
+        cursor: pointer;
+        margin-right: 0.5rem;
+      }
+      input[type="checkbox"]:checked {
+        background-color: #ffffff;
+        border-color: #000000;
+        position: relative;
+      }
+      input[type="checkbox"]:checked::before {
+        content: '✔';
+        color: #000000;
+        position: absolute;
+        top: -2px;
+        left: 2px;
+        font-size: 14px;
+      }
     }
   }
 
