--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,3 +1,9 @@
+.portfolio-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .menuShadow {
     box-shadow: 0 5px 19px 1px rgba(0, 0, 0, 0.2);
 }
