--- a/src/proyects/editorTable/styles.css
+++ b/src/proyects/editorTable/styles.css
@@ -9,171 +9,172 @@
     border-radius: 8px;
     background-color: #f1f1f142;
     box-shadow: 0px 4px 12px 8px rgb(0 0 0 / 26%);
-}
 
-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-}
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-top: 20px;
+    }
 
-thead {
-    background-color: #4e73df;
-    color: #ffffff;
-}
+    thead {
+        background-color: #4e73df;
+        color: #ffffff;
+    }
 
-th,
-td {
-    padding: 10px;
-    text-align: left;
-    border-bottom: 1px solid #dddddd;
-}
+    th,
+    td {
+        padding: 10px;
+        text-align: left;
+        border-bottom: 1px solid #dddddd;
+    }
 
-td:nth-child(1) {
-    width: 15rem;
-    text-align: center;
-}
+    td:nth-child(1) {
+        width: 15rem;
+        text-align: center;
+    }
 
-td:nth-child(2) {
-    width: 15rem;
-    text-align: center;
-}
+    td:nth-child(2) {
+        width: 15rem;
+        text-align: center;
+    }
 
-td:nth-child(3) {
-    width: 15rem;
-    text-align: center;
-}
+    td:nth-child(3) {
+        width: 15rem;
+        text-align: center;
+    }
 
-td:nth-child(4) {
-    width: 15rem;
-    text-align: center;
-}
+    td:nth-child(4) {
+        width: 15rem;
+        text-align: center;
+    }
 
-tr {
+    tr {
 
-}
-
-
-tr:nth-child(even) {
-    background-color: #f9fafc;
-}
-
-tr:hover {
-    background-color: #f1f3f8;
-}
-
-th {
-    font-weight: bold;
-    text-transform: uppercase;
-}
+    }
 
 
-.editorButtons {
-    display: flex;
-    flex-direction: row;
-}
+    tr:nth-child(even) {
+        background-color: #f9fafc;
+    }
 
-/* Botones de acción */
-button {
-    padding: 6px 12px;
-    margin: 0 5px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    height: 2rem;
-    display: flex;
-    flex-direction: row;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-    font-size: 14px;
-}
+    /*tr:hover {*/
+    /*    background-color: #f1f3f8;*/
+    /*}*/
 
-button:hover {
-    opacity: 0.9;
-}
+    th {
+        font-weight: bold;
+        text-transform: uppercase;
+    }
 
-button:nth-child(1) {
-    border: 3px solid #4caf50; /* Editar */
-    color: #000000;
-    background-color: #ffffff;
-}
 
-button:nth-child(2) {
-    background-color: #ff9800; /* Duplicar */
-    color: #ffffff;
-}
-
-button:nth-child(3) {
-    background-color: #f44336; /* Eliminar */
-    color: #ffffff;
-}
-
-.tableFormEditor {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.newEntry {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 2rem auto;
-}
-
-/* Campo de entrada de filtro */
-input[type="text"],
-input[type="number"] {
-    padding: 8px;
-    margin: 8px 0;
-    border: 1px solid #cccccc;
-    border-radius: 5px;
-    width: 15rem;
-    box-sizing: border-box;
-}
-
-input[type="text"]::placeholder,
-input[type="number"]::placeholder {
-    color: #b0b0b0;
-}
-
-input[type="text"]:focus,
-input[type="number"]:focus {
-    outline: none;
-    border-color: #4e73df;
-}
-
-/* Botón Agregar */
-button:last-of-type {
-    background-color: #4e73df;
-    color: #ffffff;
-}
-
-/* Modal */
-.modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.modal-content {
-    display: flex;
-    align-items: center;
-    background: #fff;
-    padding: 2rem;
-    border-radius: 8px;
-    width: 34rem;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    div {
+    .editorButtons {
         display: flex;
         flex-direction: row;
-        margin: 1rem auto;
     }
+
+    /* Botones de acción */
+    button {
+        padding: 6px 12px;
+        margin: 0 5px;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+        height: 2rem;
+        display: flex;
+        flex-direction: row;
+        align-content: center;
+        justify-content: center;
+        align-items: center;
+        font-size: 14px;
+    }
+
+    button:hover {
+        opacity: 0.9;
+    }
+
+    button:nth-child(1) {
+        border: 3px solid #4caf50; /* Editar */
+        color: #000000;
+        background-color: #ffffff;
+    }
+
+    button:nth-child(2) {
+        background-color: #ff9800; /* Duplicar */
+        color: #ffffff;
+    }
+
+    button:nth-child(3) {
+        background-color: #f44336; /* Eliminar */
+        color: #ffffff;
+    }
+
+    .tableFormEditor {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .newEntry {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 2rem auto;
+    }
+
+    /* Campo de entrada de filtro */
+    input[type="text"],
+    input[type="number"] {
+        padding: 8px;
+        margin: 8px 0;
+        border: 1px solid #cccccc;
+        border-radius: 5px;
+        width: 15rem;
+        box-sizing: border-box;
+    }
+
+    input[type="text"]::placeholder,
+    input[type="number"]::placeholder {
+        color: #b0b0b0;
+    }
+
+    input[type="text"]:focus,
+    input[type="number"]:focus {
+        outline: none;
+        border-color: #4e73df;
+    }
+
+    /* Botón Agregar */
+    button:last-of-type {
+        background-color: #4e73df;
+        color: #ffffff;
+    }
+
+    /* Modal */
+    .modal {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: rgba(0, 0, 0, 0.5);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .modal-content {
+        display: flex;
+        align-items: center;
+        background: #fff;
+        padding: 2rem;
+        border-radius: 8px;
+        width: 34rem;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        div {
+            display: flex;
+            flex-direction: row;
+            margin: 1rem auto;
+        }
+    }
+
 }
