--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -26,10 +26,11 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    margin-bottom: 2rem !important;
+    margin-bottom: 3rem !important;
 }
 
 .card-title {
+    padding-bottom: 0.5rem;
     /*background-color: #00000096;*/
     /*border-radius: 11px;*/
     /*padding: 0.25rem;*/
