--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -22,6 +22,11 @@
     width: 90%;
 }
 
+.container-width {
+    width: 100rem;
+    max-width: 100%;
+}
+
 .container-card {
     display: flex;
     flex-direction: column;
